gengo/bind/sdk/Stderr.log
In file included from ..\..\..\bin\debug\SDK\HyperDbgSdk.h:4:
D:\fork\HyperDbg\hyperdbg\include\SDK/Headers/BasicTypes.h:32:9: error: unknown type name 'wchar_t'
   32 | typedef wchar_t            WCHAR;
      |         ^
In file included from ..\..\..\bin\debug\SDK\HyperDbgSdk.h:7:
D:\fork\HyperDbg\hyperdbg\include\SDK/Headers/DataTypes.h:187:5: error: unknown type name 'PVOID'
  187 |     PVOID                                 Context;
      |     ^
D:\fork\HyperDbg\hyperdbg\include\SDK/Headers/DataTypes.h:242:1: warning: use of 'static_assert' without inclusion of <assert.h> is a Microsoft extension [-Wmicrosoft-static-assert]
  242 | static_assert(sizeof(DEBUGGEE_UD_PAUSED_PACKET) < PacketChunkSize,
      | ^~~~~~~~~~~~~
      | _Static_assert
D:\fork\HyperDbg\hyperdbg\include\SDK/Headers/DataTypes.h:281:5: error: unknown type name 'HANDLE'
  281 |     HANDLE      hEvent;
      |     ^
D:\fork\HyperDbg\hyperdbg\include\SDK/Headers/DataTypes.h:348:5: error: unknown type name 'PVOID'
  348 |     PVOID TargetAddress;
      |     ^
D:\fork\HyperDbg\hyperdbg\include\SDK/Headers/DataTypes.h:349:5: error: unknown type name 'PVOID'
  349 |     PVOID HookFunction;
      |     ^
D:\fork\HyperDbg\hyperdbg\include\SDK/Headers/DataTypes.h:361:5: error: unknown type name 'SIZE_T'
  361 |     SIZE_T                      PhysicalAddress;
      |     ^
In file included from ..\..\..\bin\debug\SDK\HyperDbgSdk.h:9:
D:\fork\HyperDbg\hyperdbg\include\SDK/Headers/Events.h:351:5: error: unknown type name 'LIST_ENTRY'
  351 |     LIST_ENTRY
      |     ^
D:\fork\HyperDbg\hyperdbg\include\SDK/Headers/Events.h:355:5: error: unknown type name 'time_t'; did you mean 'size_t'?
  355 |     time_t CreationTime; // Date of creating this event
      |     ^~~~~~
      |     size_t
note: 'size_t' declared here
D:\fork\HyperDbg\hyperdbg\include\SDK/Headers/Events.h:393:5: error: unknown type name 'PVOID'
  393 |     PVOID CommandStringBuffer;
      |     ^
In file included from ..\..\..\bin\debug\SDK\HyperDbgSdk.h:10:
D:\fork\HyperDbg\hyperdbg\include\SDK/Headers/RequestStructures.h:140:5: error: unknown type name 'PVOID'
  140 |     PVOID        BufferAddress;
      |     ^
D:\fork\HyperDbg\hyperdbg\include\SDK/Headers/RequestStructures.h:845:5: error: unknown type name 'PVOID'
  845 |     PVOID  CustomCodeBufferAddress;
      |     ^
In file included from ..\..\..\bin\debug\SDK\HyperDbgSdk.h:11:
D:\fork\HyperDbg\hyperdbg\include\SDK/Headers/Symbols.h:32:22: error: use of undeclared identifier 'MAX_PATH'
   32 |     char    FilePath[MAX_PATH];
      |                      ^
D:\fork\HyperDbg\hyperdbg\include\SDK/Headers/Symbols.h:33:30: error: use of undeclared identifier 'MAX_PATH'
   33 |     char    ModuleSymbolPath[MAX_PATH];
      |                              ^
D:\fork\HyperDbg\hyperdbg\include\SDK/Headers/Symbols.h:42:5: error: unknown type name 'wchar_t'
   42 |     wchar_t FilePath[MAX_PATH];
      |     ^
D:\fork\HyperDbg\hyperdbg\include\SDK/Headers/Symbols.h:42:22: error: use of undeclared identifier 'MAX_PATH'
   42 |     wchar_t FilePath[MAX_PATH];
      |                      ^
D:\fork\HyperDbg\hyperdbg\include\SDK/Headers/Symbols.h:84:1: warning: use of 'static_assert' without inclusion of <assert.h> is a Microsoft extension [-Wmicrosoft-static-assert]
   84 | static_assert(sizeof(DEBUGGER_UPDATE_SYMBOL_TABLE) < PacketChunkSize,
      | ^~~~~~~~~~~~~
      | _Static_assert
2 warnings and 15 errors generated.
